--- a/recipes/html.html
+++ b/recipes/html.html
@@ -1,3 +1,15 @@
 <body>
-    <h1>HTML Boilerplate</h1>
+    <h1>
+        <img src="https://www.codegrepper.com/codeimages/html-boilerplate.png">
+    </h1>
+    <h1>Description</h1>
+    <p>Steps for creating html boilerplate</p>
+    <h1>Ingredients</h1>
+    <ul>
+        <li>DOCTYPE</li>
+        <li>html lang</li>
+        <li>title</li>
+        <li>head</li>
+        <li>body</li>
+    </ul>
 </body>
