iteration 4 im too lazy to add the last recipe pages but I know that I would need to link the two additional recipes to through an anchor tag and that if the pages needed additional photos from an image folder i would need to include a "../" in the path

--- a/recipes/html.html
+++ b/recipes/html.html
@@ -13,3 +13,12 @@
         <li>body</li>
     </ul>
 </body>
+    <ol>
+        <li>Declare the docktype in the first line</li>
+        <li>declare type (html) and lang</li>
+        <li>create start of head</li>
+        <li>create character set through meta charset within head</li>
+        <li>create title within head</li>
+        <li>end head</li>
+        <li>create and end body</li>
+    </ol>
